# Abgabe3

./: .pdm-python  Leistungskurve.py  Plot.py  README.md  main.py  pyproject.toml
